# toyEngine

./: .gitattributes  .gitignore  CMakeLists.txt  README.MD  toy.code-workspace
Include/glad/: glad.h
Libs/: glad.lib
Shaders/: shader.fsh  shader.vsh
Source/Private/: main.cpp  shader.cpp
Source/Public/: shader.hpp
include/glad/: glad.h
libs/: glfw3.lib
src/private/: glad.c
